--- a/tls-generate.cnf
+++ b/tls-generate.cnf
@@ -3,36 +3,23 @@ default_md = md5
 
 # default section for "req" command options
 [req]
-input_password     = yourcompany
-prompt             = yes
-distinguished_name = localhost
+distinguished_name = %CN
 
-[localhost]
+[%CN]
 
 # Minimum of 4 bytes are needed for common name
 commonName         = Common Name
-commonName_default = yourcompany.com CA
+commonName_default = %CN CA
 
 # ISO2 country code only
 countryName         = Country Name
-countryName_default = US
+countryName_default = %COUNTRY
 
 # State is optional, no minimum limit
 stateOrProvinceName         = State
-stateOrProvinceName_default = NY
+stateOrProvinceName_default = %STATE
 
 # City is required
 localityName         = City
-localityName_default = A place
+localityName_default = %CITY
 
-# Organization is optional
-organizationName         = Organization
-organizationName_default = yourcompany.com
-
-# Organization Unit is optional
-organizationalUnitName         = Department
-organizationalUnitName_default = IT
-
-# Email is optional
-emailAddress         = Email
-emailAddress_default = ca@yourcompany.com
