--- a/tls-generate.cnf
+++ b/tls-generate.cnf
@@ -9,7 +9,7 @@ distinguished_name = %CN
 
 # Minimum of 4 bytes are needed for common name
 commonName         = Common Name
-commonName_default = %CN CA
+commonName_default = %CN
 
 # ISO2 country code only
 countryName         = Country Name
